updates summaries lessons: 20-22

--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -314,15 +314,20 @@ ReactDOM.render(<App />, root);
       מה יש מחוץ לריאקט?
   </pre>
   <pre>
-      1.) שורת הכותרת (ה title) בדפדפן נקבעת על ידי משתנה גלובאלי בשם document.title - משתנה שנמצא מחוץ לריאקט. בעזרת useEffect נוכל לחבר שינויים בסטייט כך שיגרמו באופן אוטומטי לשינויים במשתנה זה, וכך משתנה מהסטייט ישפיע על כותרת המסמך בדפדפן.
+      1.) שורת הכותרת (ה title) בדפדפן נקבעת על ידי משתנה גלובאלי בשם document.title - משתנה שנמצא מחוץ לריאקט.
+       בעזרת useEffect נוכל לחבר שינויים בסטייט כך שיגרמו באופן אוטומטי לשינויים במשתנה זה, וכך משתנה מהסטייט ישפיע על כותרת המסמך בדפדפן.
   </pre>
   <pre>
-      2.) שילוב API חיצוני בתוכנית (לדוגמא YouTube API) הוא מנגנון חיצוני לריאקט. בעזרת useEffect נוכל לחבר משתנה מהסטייט לדוגמא למזהה סרט מוטמע מ YouTube, וכך בעקבות שינוי בסטייט באופן אוטומטי הסרט יוחלף.
+      2.) שילוב API חיצוני בתוכנית (לדוגמא YouTube API) הוא מנגנון חיצוני לריאקט.
+       בעזרת useEffect נוכל לחבר משתנה מהסטייט לדוגמא למזהה סרט מוטמע מ YouTube,
+       וכך בעקבות שינוי בסטייט באופן אוטומטי הסרט יוחלף.
   </pre>
   <pre>
-      3.) הרבה פעמים נשתמש ב useEffect כדי להתחיל פעולה אסינכרונית באופן אוטומטי בעקבות שינוי בסטייט. בצורה כזו לא משנה מאיזה מקום משתנה הסטייט עודכן, הפעולה האסינכרונית תתחיל בכל מקרה ברגע הנכון.
+      3.) הרבה פעמים נשתמש ב useEffect כדי להתחיל פעולה אסינכרונית באופן אוטומטי בעקבות שינוי בסטייט.
+       בצורה כזו לא משנה מאיזה מקום משתנה הסטייט עודכן, הפעולה האסינכרונית תתחיל בכל מקרה ברגע הנכון.
   </pre>
   <pre>
-      4.) מעבר להשפעה על העולם החיצון ל useEffect יש מנגנון פעולה ייחודי שמאפשר לזהות את הפעם הראשונה שריאקט מפעיל render על הפקד שלכם, ולכן נוכל להשתמש בו גם עבור קוד איתחול - לדוגמא לאתחל Timer כשפקד מסוים נכנס לעמוד.
+      4.) מעבר להשפעה על העולם החיצון ל useEffect יש מנגנון פעולה ייחודי שמאפשר לזהות את הפעם הראשונה שריאקט מפעיל render על הפקד שלכם,
+       ולכן נוכל להשתמש בו גם עבור קוד איתחול - לדוגמא לאתחל Timer כשפקד מסוים נכנס לעמוד.
   </pre>
 </div>
