updates summaries lessons: 20-22

--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -307,27 +307,28 @@ ReactDOM.render(<App />, root);
 ```
 <div dir="rtl">
   <h1> useEffect </h1>
-  <pre>
-        הפקדים שראינו עד עכשיו היו כולם סגורים בתוך העולם של ריאקט. הדינמיקה שלהם התחילה מאירוע, שגרם לשינוי בסטייט שבתורו גרם ל render מחדש וכך ראינו את השינוי על המסך. אבל הפקודה render מוגבלת רק לשינויים במה שאנחנו רואים על המסך בתוך העולם של פקדי ריאקט. הפקודה useEffect עליה נלמד בשיעור זה תתן לנו "לברוח" מהעולם של ריאקט כך ששינויים בסטייט ישפיעו על העולם החיצון.
-  </pre>
-  <pre>
+  <p>
+        הפקדים שראינו עד עכשיו היו כולם סגורים בתוך העולם של ריאקט. הדינמיקה שלהם התחילה מאירוע, שגרם לשינוי בסטייט שבתורו גרם ל render מחדש וכך ראינו את השינוי על המסך.
+         אבל הפקודה render מוגבלת רק לשינויים במה שאנחנו רואים על המסך בתוך העולם של פקדי ריאקט. הפקודה useEffect עליה נלמד בשיעור זה תתן לנו "לברוח" מהעולם של ריאקט כך ששינויים בסטייט ישפיעו על העולם החיצון.
+  </p>
+  <p>
       מה יש מחוץ לריאקט?
-  </pre>
-  <pre>
+  </p>
+  <p>
       1.) שורת הכותרת (ה title) בדפדפן נקבעת על ידי משתנה גלובאלי בשם document.title - משתנה שנמצא מחוץ לריאקט.
        בעזרת useEffect נוכל לחבר שינויים בסטייט כך שיגרמו באופן אוטומטי לשינויים במשתנה זה, וכך משתנה מהסטייט ישפיע על כותרת המסמך בדפדפן.
-  </pre>
-  <pre>
+  </p>
+  <p>
       2.) שילוב API חיצוני בתוכנית (לדוגמא YouTube API) הוא מנגנון חיצוני לריאקט.
        בעזרת useEffect נוכל לחבר משתנה מהסטייט לדוגמא למזהה סרט מוטמע מ YouTube,
        וכך בעקבות שינוי בסטייט באופן אוטומטי הסרט יוחלף.
-  </pre>
-  <pre>
+  </p>
+  <p>
       3.) הרבה פעמים נשתמש ב useEffect כדי להתחיל פעולה אסינכרונית באופן אוטומטי בעקבות שינוי בסטייט.
        בצורה כזו לא משנה מאיזה מקום משתנה הסטייט עודכן, הפעולה האסינכרונית תתחיל בכל מקרה ברגע הנכון.
-  </pre>
-  <pre>
+  </p>
+  <p>
       4.) מעבר להשפעה על העולם החיצון ל useEffect יש מנגנון פעולה ייחודי שמאפשר לזהות את הפעם הראשונה שריאקט מפעיל render על הפקד שלכם,
        ולכן נוכל להשתמש בו גם עבור קוד איתחול - לדוגמא לאתחל Timer כשפקד מסוים נכנס לעמוד.
-  </pre>
+  </p>
 </div>
