updates summaries lessons: 22-28

--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -305,8 +305,11 @@ const App = () => {
 const root = document.querySelector('main');
 ReactDOM.render(<App />, root);
 ```
+
+# useEffect
+Out of: [State] -> Render -> UI -> State -> Render -> UI
+
 <div dir="rtl">
-  <h1> useEffect </h1>
   <p>
         הפקדים שראינו עד עכשיו היו כולם סגורים בתוך העולם של ריאקט. הדינמיקה שלהם התחילה מאירוע, שגרם לשינוי בסטייט שבתורו גרם ל render מחדש וכך ראינו את השינוי על המסך.
          אבל הפקודה render מוגבלת רק לשינויים במה שאנחנו רואים על המסך בתוך העולם של פקדי ריאקט. הפקודה useEffect עליה נלמד בשיעור זה תתן לנו "לברוח" מהעולם של ריאקט כך ששינויים בסטייט ישפיעו על העולם החיצון.
@@ -332,3 +335,493 @@ ReactDOM.render(<App />, root);
        ולכן נוכל להשתמש בו גם עבור קוד איתחול - לדוגמא לאתחל Timer כשפקד מסוים נכנס לעמוד.
   </p>
 </div>
+
+<h1> useEffect Template</h1>
+
+```JS
+  useEffect(function() {
+    // run code here if dependencies change
+
+    return function abort() {
+
+    }
+  }, [dependencies]);
+```
+# Examples for useEffect:
+
+# 1.) Example for useEffect: title
+```JS
+import React from 'react';
+import ReactDOM from 'react-dom';
+import { useState, useEffect } from 'react';
+
+function DocumentTitleChanger(props) {
+  const [title, setTitle] = useState(document.title);
+
+  useEffect(function(){
+      document.title = title;
+  }, [title])
+
+  return (
+    <input type="text" value={title} onChange={(e) => setTitle(e.target.value)} />
+  );
+}
+
+
+const App = () => {
+
+  return (
+    <div>
+      <h1>Hello World</h1>
+      <DocumentTitleChanger />
+    </div>
+  )
+};
+
+
+// main.js
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
+
+```
+
+# 2.) Example for useEffect: starwarsCharacters - youtubePlayer API
+```JS
+
+import React, { useEffect, useRef, useState } from 'react';
+import ReactDOM from 'react-dom';
+import YouTubePlayer from 'youtube-player';
+
+function YouTubePlayerComponent({videosIdList}) {
+  const [currentId , setCurrentId] = useState(videosIdList[0]);
+  const [isPlay , setIsPlay] = useState(false);
+  const layerDivRef = useRef(null);
+  const playRef = useRef(null);
+
+  useEffect(() => {
+     playRef.current = YouTubePlayer(layerDivRef.current);
+  } , []);
+
+  useEffect(()=>{
+    playRef.current.loadVideoById(currentId);
+    playRef.current.stopVideo();
+    setIsPlay(false);
+  } , [currentId]);
+
+  useEffect(()=>{
+    isPlay ? playRef.current.playVideo(): playRef.current.stopVideo();
+  } , [isPlay]);
+
+
+  return (
+      <>
+        <div ref={layerDivRef}/>
+        <div>
+          <select defaultValue="default" onChange={(e)=>setCurrentId(e.target.value)}>
+            <option disabled value="default">Please Choose A Player</option>
+            {videosIdList.map((videoId , index)=>(
+              <option key={index} value={videoId}>Video number {index+1}</option>
+            ))}
+          </select>
+        </div>
+        <button onClick={()=>setIsPlay(oldVal=>!oldVal)}>Play/stop</button>
+      </>
+  );
+}
+
+const App = () => {
+  const videosIdList = ['etBJl2vfhb4',  'dxdfIQLcWN8',  'rFn5TbT_GgU',  'rj4t2oIhjSE',  'xZWSaQSG1Ws'];
+  return (
+    <YouTubePlayerComponent videosIdList = {videosIdList}/>
+  );
+}
+
+ReactDOM.render(<App/> , document.querySelector('main'));
+```
+
+# 3.) Example for useEffect: starwarsCharacters - server API with useRemoteData - Custom hook
+useRemoteData.js:
+```JS
+import { useEffect, useState } from 'react';
+import $ from 'jquery';
+
+export default function useRemoteData(url) {
+    const [data , setData] = useState(null);
+    const [error ,setError] = useState(null);
+    const isLoading = data ? false : true;
+
+    useEffect(()=> {
+        setData(null);
+        setError(null);
+        const xhr = $.getJSON(url , setData).fail((jqxhr, textStatus, error)=>setError(`Request Failed: ${textStatus}. ${error}`));
+        return()=>xhr.abort();
+    },[url]);
+
+    return [data , isLoading , error];
+}
+
+```
+main.js
+```JS
+import React, { useState } from 'react';
+import ReactDOM from 'react-dom';
+
+import StarWarsCharacter from './starWarsCharacter';
+import '../styles/main.scss';
+
+const InfoByID = () => {
+    const [id , setId] = useState(1);
+
+    return (
+        <>  
+            <div className="characterId">
+                <input type="number" value={id} onChange={(e)=>setId(e.target.value)}/>
+            </div>
+            <StarWarsCharacter id={id}/>
+        </>
+    );
+}
+
+const App = () => {
+    return (
+        <InfoByID/>
+    );
+}
+
+ReactDOM.render(<App/> , document.querySelector('main'));
+```
+starWarsCharacter.js
+```JS
+import React from 'react' ;
+
+import StarWarsFilm from './starWarsFilm';
+import useRemoteData from './useRemoteData';
+
+function ShowCharacterInfo({data}) {
+    return (
+        <>
+            <div className="showCharacterInfo">
+                <h1>Character Info</h1>
+                <div>
+                    <p><b>name: </b>{data.name}</p>
+                    <p><b>height: </b>{data.height}</p>
+                    <p><b>mass: </b>{data.mass}</p>
+                    <p><b>hair color: </b>{data.hair_color}</p>
+                    <p><b>skin color: </b>{data.skin_color}</p>
+                    <p><b>eye color: </b>{data.eye_color}</p>
+                    <p><b>birth year: </b>{data.birth_year}</p>
+                    <p><b>gender: </b>{data.gender}</p>
+                </div>
+            </div>
+            <div className="starWarsFilm">
+                <h2>Character Films</h2>
+                {data.films.map((filmUrl , index) => <div key={filmUrl}> 
+                                                          <span className="h3FilmName number"> {index + 1}.) </span> 
+                                                          <StarWarsFilm id = {filmUrl.split('/')[5]}/> 
+                                                     </div> 
+                )}
+            </div>
+        </>
+    );
+}
+
+export default function StarWarsCharacter({id}) {
+    const [data , isLoading , error] = useRemoteData(`https://swapi.dev/api/people/${id}/`);
+    
+    if (error) return <p className='error'>{error}</p>
+
+    if (isLoading) return <p className='loading'> Loading character , please wait... </p>
+
+    return (
+        <ShowCharacterInfo data = {data}/>
+    );
+}
+```
+starWarsFilm.js
+```JS
+import React from 'react';
+
+import useRemoteData from './useRemoteData';
+
+function ShowFilmInfo({data}) {
+    return(
+        <>
+            <span className="h3FilmName">{data.title}</span>
+            <div className="showFilmInfo">
+                <p><b>Episode id:</b> {data.episode_id}</p>
+                <p><b>Opening crawl:</b></p>
+                <div>{data.opening_crawl}</div>
+                <p><b>Director:</b> {data.director}</p>
+                <p><b>Producer:</b> {data.producer}</p>
+                <p><b>Release_date:</b> {data.release_date}</p>
+            </div>
+        </>
+    );
+}
+
+export default function StarWarsFilm({id}) {
+    const [data , isLoading , error] = useRemoteData(`https://swapi.dev/api/films/${id}/`);
+
+    if (error) return <p className='error'>{error}</p>
+
+    if (isLoading) return <p className='loading'> Loading film , please wait... </p>
+
+    return (
+        <>
+            <ShowFilmInfo data = {data}/>
+        </>
+    );
+}
+```
+
+# 4.) Example for useEffect: Timer
+```JS
+import React from 'react';
+import ReactDOM from 'react-dom';
+import { useState, useEffect } from 'react';
+
+function Timer(props) {
+  const [ticks, setTicks] = useState(0);
+
+  useEffect(()=> {
+    // What to do
+    const timer = setInterval(() => {
+      setTicks(v => v + 1);  console.log('Ouch!');
+      //and not setTicks(ticks + 1) -> this option will look on the first tick only and will not update on each calling. because it is happend after the first render only
+    } , 1000);
+    // What to undo
+    return () => { clearInterval(timer); }
+    // When to undo/do
+  }, []);
+
+  return (
+    <p>Ticks: {ticks}</p>
+  );
+}
+
+const App = () => {
+  const [showTimer, setShowTimer] = useState(true);
+
+  function toggleTimer() {
+    setShowTimer(val => !val);
+  }
+
+  return (
+    <div>
+      <h1>Hello World</h1>
+      <button onClick={toggleTimer}>Hide/Show timer</button>
+      {showTimer && <Timer />}
+    </div>
+  )
+};
+
+
+// main.js
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
+```
+# Class component lifecycle:
+# 1.) component_will_unmount
+```JS
+import React from 'react';
+export default class Demo1 extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {m:0 , s:0};
+    this.timerID = setInterval(this.tick.bind(this), 1000);
+
+  }
+
+  componentWillUnmount() {
+    clearInterval(this.timerID);
+  }
+
+  tick() {
+    let {m , s} = this.state;
+    s < 59 ? s++: (s=0 , m++);
+    this.setState({m ,s});
+  }
+
+  render() {
+    const {m , s} = this.state;
+    return (
+      <div style={{fontSize:'1.5rem'}}>
+        <h1>
+           {String(m).padStart(2 , 0)} : {String(s).padStart(2 , 0)}
+        </h1>
+      </div>
+    );
+  }
+}
+```
+# 2.) component_did_mount
+```JS
+import React from 'react';
+export default class DatePicker extends React.Component {
+  constructor() {
+    super();
+    this.state = {  date: new Date().toISOString().slice(0, 10),  };
+    this.inputDateRef = React.createRef();
+  }
+
+  componentDidMount() {
+    this.inputDateRef.current.flatpickr();    
+  }
+
+  render() {
+    
+    const {date} = this.state;
+    return (
+      <div style={{fontSize:'1.5rem'}}>
+        <h1>Demo2</h1>
+        <input type='dateTime' value={this.state.date} ref = {this.inputDateRef}  onInput={(e)=>{this.setState({date:e.target.value})}}/>
+        <div>   <label>{date}</label>   </div>
+      </div>
+    );
+  }
+}
+```
+# 3.) get_derived_state_from_props
+```JS
+import React from 'react';
+class TextBox extends React.Component {
+  constructor(props) {
+    super(props);
+    this.state = {text: props.text , changed:false};
+  }
+
+  onChangeHandler(newText) {
+    newText!==this.props.text ? this.setState({text : newText , changed : true}) : this.setState({text : newText , changed : false});
+  }
+
+  //Can return a new state if need
+  static getDerivedStateFromProps(props , state) {
+    if(!state.changed || state.text === props.text) return {text : props.text , changed : false};
+    return null;
+  }
+
+  render() {
+    this.style = this.state.text === this.props.text ? {borderBottom: "3px solid black"} : {borderBottom: "3px solid red"};
+    return (
+        <input style={this.style} value={this.state.text} onChange={(e) => this.onChangeHandler(e.target.value)}/>
+    );
+  }
+}
+
+
+export default class Demo3 extends React.Component {
+  constructor() {
+    super();
+    this.state = {currentText: this.getText()};
+  }
+
+  getText() {
+    const texts = ['one', 'two', 'three', 'four', 'five', 'six', 'seven'];
+    return texts[Math.floor(Math.random()*texts.length)];
+  }
+
+  render() {
+    return (
+      <div>
+        <h1>Demo3</h1>
+        <button onClick={()=>{this.setState({currentText: this.getText()})}}>Click to change the text</button>
+        <TextBox text={this.state.currentText}/>
+        <TextBox text={this.state.currentText}/>
+        <TextBox text={this.state.currentText}/>
+        <TextBox text={this.state.currentText}/>
+        <TextBox text={this.state.currentText}/>
+      </div>
+    )
+  }
+}
+```
+# 4.) component_did_update
+
+```JS
+import React from 'react';
+// 3. This function creates an <iframe> (and YouTube player)
+//    after the API code downloads.
+const apiReady = new Promise((resolve , reject)=>{
+  window.onYouTubeIframeAPIReady = function() {
+    resolve();
+  };
+});
+
+export default class Demo4 extends React.Component {
+  constructor() {
+    super();
+    this.playRef = React.createRef(null);
+    this.state = {playing: false};
+    this.toggle = this.toggle.bind(this);
+  }
+
+  toggle() {
+    this.setState({ playing:!this.state.playing });
+  }
+
+  componentDidUpdate(prevProps , prevState) {
+    this.state.playing ? this.player.playVideo() : this.player.pauseVideo();
+  }
+
+  componentDidMount() {
+    apiReady.then(()=>{
+       this.player = new YT.Player(this.playRef.current , {videoId: 'dxdfIQLcWN8'});
+    })
+  }
+
+  render() {
+    return (
+      <>
+        <h1>Demo4</h1>
+        <button onClick={this.toggle}>Play/pause</button>
+        <div ref={this.playRef}></div>
+      </>
+    );
+  }
+}
+```
+# 5.) component_did_catch
+```JS
+import React from 'react';
+class Bomb extends React.Component {
+  constructor() {
+    super();
+    this.btnClick = this.btnClick.bind(this);
+    this.state = {bomb: false};
+  }
+
+  btnClick() {
+    this.setState({bomb: true});
+  }
+
+  render() {
+    if(this.state.bomb) {
+      throw 'Bomb';
+    }
+    return(
+      <button onClick={this.btnClick}>Click to Bomb</button>
+    );
+  }
+}
+
+export default class Demo5 extends React.Component {
+  constructor() {
+    super();
+    this.state = {msg: '' , bomb:0};
+  }
+
+  componentDidCatch(error , info) {
+    this.setState({msg : error , bomb: ++this.state.bomb});
+  }
+
+  render() {
+    return (
+      <div>
+        <h1>Demo5</h1>
+        <p>{this.state.msg && `${this.state.msg} count of bomb ${this.state.bomb}`}</p>
+        <Bomb/>
+      </div>
+    );
+  }
+}
+```
