update summaries lessons: 29-33

--- a/my-react-course/course summaries/4.) What-else-does-component-do.md
+++ b/my-react-course/course summaries/4.) What-else-does-component-do.md
@@ -13,7 +13,7 @@
   </p>
   <p>
       3.)
-      כשיש אלמנט שהיה לו מאפיין key לפני render, אבל אחרי render אין לנו אלמנט עם אותו key, ריאקט 
+      כשיש אלמנט שהיה לו מאפיין key לפני render, אבל אחרי render אין לנו אלמנט עם אותו key, ריאקט יזרוק את האלמנט ויצור חדש.
   </p>
 </div>
 
