updates summaries lessons: 29-33

--- a/my-react-course/course summaries/5.) Code-sharing-between-components.md
+++ b/my-react-course/course summaries/5.) Code-sharing-between-components.md
@@ -239,6 +239,7 @@ const root = document.querySelector('main');
 ReactDOM.render(<App />, root);
 ```
 # Render props examples:
+
 # 1.) CheckableList
 ```JS
 import React from 'react';
@@ -345,4 +346,67 @@ const App = () => {
 // main.js
 const root = document.querySelector('main');
 ReactDOM.render(<App />, root);
+```
+
+# 3.) React children forms example:
+main.js
+
+```JS
+import React from 'react';
+import ReactDOM from 'react-dom';
+
+import { FormsContainer } from './formsContainer';
+import { Login } from './login';
+import { CountryAndCity } from './countryAndCity';
+import { Hobbies } from './hobbies';
+import { Summary } from './summary';
+import '../styles/style.scss';
+
+const App = () => {
+  return (
+      <div>
+          <FormsContainer>
+                <Login/>
+                <CountryAndCity/>
+                <Hobbies/>
+                <Summary/>
+          </FormsContainer>
+      </div>
+  );
+};
+
+
+// main.js
+const root = document.querySelector('main');
+ReactDOM.render(<App />, root);
+```
+formsContainer
+
+```JS
+import React, { useEffect, useState } from 'react';
+
+export function FormsContainer(props) {
+    const [dataObjOfAllPages , setDataObjOfAllPages] = useState({});
+    const [currentIndex , setCurrentIndex] = useState(0);
+    const countOfPages = React.Children.count(props.children);
+  
+    function updateDataObjOfAllPages(dataObj) {
+      setDataObjOfAllPages({...dataObjOfAllPages, ...dataObj});
+    }
+    
+    function getCurrentPage() {
+      const child = React.Children.toArray(props.children)[currentIndex];
+      return React.cloneElement(child , { dataObjOfAllPages : {...child.props.dataObjOfAllPages , ...dataObjOfAllPages} , updateDataObjOfAllPages});
+    }
+   
+    return (
+      <>
+        {getCurrentPage()}
+        <div className="btnsContainer">
+            <button disabled={currentIndex === 0} onClick={()=>setCurrentIndex(v=>v-1)}>Previous</button>
+            <button disabled={currentIndex === countOfPages-1} onClick={()=>setCurrentIndex(v=>v+1)}>Next</button>
+        </div>
+      </>
+    );
+  }
 ```
