updates summaries lessons: 22-28

--- a/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
+++ b/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
@@ -18,36 +18,36 @@ import { connect } from 'react-redux';
 
 בקוד זה נראה כך:
         </p>
-        ```JS
+        <script>
         import produce from 'immer';
         function changeTextOfLastMessageInAnImmutableWay(state) {
             return produce(state, draft => {
                 draft.messages[2].text = 'good morning';
             });
         }
-        ```
+        </script>
         </p>
         <p>
         <h2>2. יצירת פונקציה אוטומטית עם אימר</h2>
          <p>
         לאימר יש עוד פיצ'ר שנשתמש בו הרבה בעבודה בהמשך עם רידאקס. מסתבר שאם נעביר ל produce פונקציה בתור הפרמטר הראשון, אז היא תחזיר לנו פונקציה שמקבלת כפרמטר את הדבר שאנחנו רוצים לשנות ובאופן אוטומטי הופכת אותו ל Immutable Data. במילים אחרות אפשר להחליף את הגדרת הפונקציה בקוד הבא:
-        ```JS
+        <script>
         import produce from 'immer';
         const changeTextOfLastMessageInAnImmutableWay = produce(draft => {
             draft.messages[2].text = 'good morning';
         });
-        ```
+        </script>
         </p>
         <p>
             ואפשר לקחת את זה עוד צעד קדימה ולהעביר יותר פרמטרים לפונקציה הפנימית, והפרמטרים האלה ישתקפו בפונקציה ש produce מחזירה. במילים אחרות בשביל לאפשר לקוד חיצוני לקבוע את תוכן ההודעה נוכל להשתמש בגירסא הבאה:
-            ```JS
+        <script>
             import produce from 'immer';
             const setLastMessageText = produce((draft, newText) => {
                 const lastIndex = draft.messages.length - 1;
                 draft.messages[lastIndex].text = newText;
             });
             const newState = setLastMessageText(state, 'good morning');
-            ```
+        </script>
         </p>
     </p>
 </div>
