updates summaries lessons: 38-46

--- a/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
+++ b/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
@@ -18,65 +18,74 @@ import { connect } from 'react-redux';
 
 בקוד זה נראה כך:
         </p>
-        <script>
-        import produce from 'immer';
+    </p>
+</div>
+
+```JS
+import produce from 'immer';
         function changeTextOfLastMessageInAnImmutableWay(state) {
             return produce(state, draft => {
                 draft.messages[2].text = 'good morning';
             });
         }
-        </script>
-        </p>
-        <p>
+```  
+<div dir="rtl">
+    <p>      
         <h2>2. יצירת פונקציה אוטומטית עם אימר</h2>
          <p>
         לאימר יש עוד פיצ'ר שנשתמש בו הרבה בעבודה בהמשך עם רידאקס. מסתבר שאם נעביר ל produce פונקציה בתור הפרמטר הראשון, אז היא תחזיר לנו פונקציה שמקבלת כפרמטר את הדבר שאנחנו רוצים לשנות ובאופן אוטומטי הופכת אותו ל Immutable Data. במילים אחרות אפשר להחליף את הגדרת הפונקציה בקוד הבא:
-        <script>
-        import produce from 'immer';
+        </p>
+    </p>
+<div>
+
+```JS
+ import produce from 'immer';
         const changeTextOfLastMessageInAnImmutableWay = produce(draft => {
             draft.messages[2].text = 'good morning';
         });
-        </script>
-        </p>
-        <p>
+```
+<div dir="rtl">
+    <p> 
             ואפשר לקחת את זה עוד צעד קדימה ולהעביר יותר פרמטרים לפונקציה הפנימית, והפרמטרים האלה ישתקפו בפונקציה ש produce מחזירה. במילים אחרות בשביל לאפשר לקוד חיצוני לקבוע את תוכן ההודעה נוכל להשתמש בגירסא הבאה:
-        <script>
-            import produce from 'immer';
+    </p>
+</div>
+
+```JS
+  import produce from 'immer';
             const setLastMessageText = produce((draft, newText) => {
                 const lastIndex = draft.messages.length - 1;
                 draft.messages[lastIndex].text = newText;
             });
             const newState = setLastMessageText(state, 'good morning');
-        </script>
-        </p>
-    </p>
-</div>
-
+```
 <div dir="rtl">
     <p>
         <h1>Redux basic example header banner<h1>
-        main.js:
-        <script>
-        import React from 'react';
-        import ReactDOM from 'react-dom';
-        import { Provider } from 'react-redux';
-        import store from './redux/store';
-        import Header from './header';
-        import Banner from './banner';
-        import '../styles/main.scss';
-        const App = () => {
-            return (
-                <Provider store = {store}>
-                    <Header/>
-                    <Banner/>
-                </Provider>
-            );
-        }
-        ReactDOM.render(<App/> , document.querySelector('main'));
-        </script>
-        header.js
-        <script>
-        import React from 'react';
+    </p>
+</div>
+
+main.js:
+```JS
+    import React from 'react';
+    import ReactDOM from 'react-dom';
+    import { Provider } from 'react-redux';
+    import store from './redux/store';
+    import Header from './header';
+    import Banner from './banner';
+    import '../styles/main.scss';
+    const App = () => {
+        return (
+            <Provider store = {store}>
+                <Header/>
+                <Banner/>
+            </Provider>
+        );
+    }
+    ReactDOM.render(<App/> , document.querySelector('main'));
+```
+header.js
+```JS
+      import React from 'react';
         import { connect } from 'react-redux';
         import { setUserName } from './redux/actions';
         function mapStateToProps(state) {
@@ -98,10 +107,10 @@ import { connect } from 'react-redux';
                 </div>
             )
         });
-        </script>
-        banner.js
-        <script>
-        import React from 'react';
+```  
+banner.js
+```JS
+import React from 'react';
         import { connect } from 'react-redux';
         function mapStateToProps(state) {
             return {
@@ -114,10 +123,10 @@ import { connect } from 'react-redux';
             <h1> Hi {username} and wellcome to our website </h1>
             )
         });
-        </script>
-        store.js
-        <script>
-        import produce from 'immer';
+```        
+store.js
+```JS
+import produce from 'immer';
         import { createStore } from 'redux';
         const initialState = {
             username:'guest',
@@ -150,19 +159,17 @@ import { connect } from 'react-redux';
         const store = createStore(reducer);
         window.store = store;
         export default store;
-        </script>
-        actions.js
-        <script>
+```
+actions.js
+```JS
         export function setUserName(username) {
             return {type: 'SET_USERNAME' , payload: username};
         }
         export function receivedMessage(message) {
             return {type: 'RECEIVED_MESSAGE' , payload : message};
         }
-        </script>
-    </p>
-</div>
-
+```
+    
 # Combine reducers:
 
 - Example:
