updates summaries lessons: 38-46

--- a/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
+++ b/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
@@ -20,6 +20,7 @@ import { connect } from 'react-redux';
         </p>
     </p>
 </div>
+<div dir="ltr"></div>
 
 ```JS
 import produce from 'immer';
@@ -37,6 +38,7 @@ import produce from 'immer';
         </p>
     </p>
 <div>
+<div dir="ltr"></div>
 
 ```JS
  import produce from 'immer';
@@ -44,11 +46,13 @@ import produce from 'immer';
             draft.messages[2].text = 'good morning';
         });
 ```
+
 <div dir="rtl">
     <p> 
             ואפשר לקחת את זה עוד צעד קדימה ולהעביר יותר פרמטרים לפונקציה הפנימית, והפרמטרים האלה ישתקפו בפונקציה ש produce מחזירה. במילים אחרות בשביל לאפשר לקוד חיצוני לקבוע את תוכן ההודעה נוכל להשתמש בגירסא הבאה:
     </p>
 </div>
+<div dir="ltr"></div>
 
 ```JS
   import produce from 'immer';
@@ -63,6 +67,7 @@ import produce from 'immer';
         <h1>Redux basic example header banner<h1>
     </p>
 </div>
+<div dir="ltr"></div>
 
 main.js:
 ```JS
