updates summaries lessons: 38-46

--- a/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
+++ b/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
@@ -7,7 +7,7 @@ import { Provider } from 'react-redux';
 import { connect } from 'react-redux';
 ```
 
-<div dir="rtl">
+<div>
     <p>
         <h1>עבודה עם Immutable Data<h1>
     </p>
@@ -20,7 +20,6 @@ import { connect } from 'react-redux';
         </p>
     </p>
 </div>
-<div dir="ltr"></div>
 
 ```JS
 import produce from 'immer';
@@ -30,7 +29,7 @@ import produce from 'immer';
             });
         }
 ```  
-<div dir="rtl">
+<div>
     <p>      
         <h2>2. יצירת פונקציה אוטומטית עם אימר</h2>
          <p>
@@ -38,7 +37,6 @@ import produce from 'immer';
         </p>
     </p>
 <div>
-<div dir="ltr"></div>
 
 ```JS
  import produce from 'immer';
@@ -46,13 +44,11 @@ import produce from 'immer';
             draft.messages[2].text = 'good morning';
         });
 ```
-
-<div dir="rtl">
+<div>
     <p> 
             ואפשר לקחת את זה עוד צעד קדימה ולהעביר יותר פרמטרים לפונקציה הפנימית, והפרמטרים האלה ישתקפו בפונקציה ש produce מחזירה. במילים אחרות בשביל לאפשר לקוד חיצוני לקבוע את תוכן ההודעה נוכל להשתמש בגירסא הבאה:
     </p>
 </div>
-<div dir="ltr"></div>
 
 ```JS
   import produce from 'immer';
@@ -62,12 +58,11 @@ import produce from 'immer';
             });
             const newState = setLastMessageText(state, 'good morning');
 ```
-<div dir="rtl">
+<div>
     <p>
         <h1>Redux basic example header banner<h1>
     </p>
 </div>
-<div dir="ltr"></div>
 
 main.js:
 ```JS
