updates summaries lessons: 38-46

--- a/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
+++ b/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
@@ -9,11 +9,11 @@ import { connect } from 'react-redux';
 
 <div>
     <p>
-        <h1>עבודה עם Immutable Data<h1>
+        <h1 dir="rtl">עבודה עם Immutable Data<h1>
     </p>
     <p>
-        <h2>1. איך Immer משפרת לנו את החיים:</h2>
-        <p>
+        <h2 dir="rtl">1. איך Immer משפרת לנו את החיים:</h2>
+        <p dir="rtl">
 הספריה Immer מציעה ממשק ממש פשוט להפוך את JavaScript לשפה שתומכת ב Immutable Data. אימר תתן לנו פונקציה בשם produce, ובתוכה כל פעולה שנעשה תתורגם אוטומטית לפעולת Immutable: אימר תיצוא אוביקט חדש ובו החלק שיושפע מהפעולה יהיה שונה וכל שאר החלקים יהיו זהים.
 
 בקוד זה נראה כך:
@@ -23,40 +23,40 @@ import { connect } from 'react-redux';
 
 ```JS
 import produce from 'immer';
-        function changeTextOfLastMessageInAnImmutableWay(state) {
-            return produce(state, draft => {
-                draft.messages[2].text = 'good morning';
-            });
-        }
+function changeTextOfLastMessageInAnImmutableWay(state) {
+    return produce(state, draft => {
+        draft.messages[2].text = 'good morning';
+    });
+}
 ```  
 <div>
     <p>      
-        <h2>2. יצירת פונקציה אוטומטית עם אימר</h2>
-         <p>
+        <h2 dir="rtl">2. יצירת פונקציה אוטומטית עם אימר</h2>
+         <p dir="rtl">
         לאימר יש עוד פיצ'ר שנשתמש בו הרבה בעבודה בהמשך עם רידאקס. מסתבר שאם נעביר ל produce פונקציה בתור הפרמטר הראשון, אז היא תחזיר לנו פונקציה שמקבלת כפרמטר את הדבר שאנחנו רוצים לשנות ובאופן אוטומטי הופכת אותו ל Immutable Data. במילים אחרות אפשר להחליף את הגדרת הפונקציה בקוד הבא:
         </p>
     </p>
 <div>
 
 ```JS
- import produce from 'immer';
-        const changeTextOfLastMessageInAnImmutableWay = produce(draft => {
-            draft.messages[2].text = 'good morning';
-        });
+import produce from 'immer';
+const changeTextOfLastMessageInAnImmutableWay = produce(draft => {
+    draft.messages[2].text = 'good morning';
+});
 ```
 <div>
-    <p> 
+    <p dir="rtl"> 
             ואפשר לקחת את זה עוד צעד קדימה ולהעביר יותר פרמטרים לפונקציה הפנימית, והפרמטרים האלה ישתקפו בפונקציה ש produce מחזירה. במילים אחרות בשביל לאפשר לקוד חיצוני לקבוע את תוכן ההודעה נוכל להשתמש בגירסא הבאה:
     </p>
 </div>
 
 ```JS
   import produce from 'immer';
-            const setLastMessageText = produce((draft, newText) => {
-                const lastIndex = draft.messages.length - 1;
-                draft.messages[lastIndex].text = newText;
-            });
-            const newState = setLastMessageText(state, 'good morning');
+  const setLastMessageText = produce((draft, newText) => {
+      const lastIndex = draft.messages.length - 1;
+      draft.messages[lastIndex].text = newText;
+  });
+  const newState = setLastMessageText(state, 'good morning');
 ```
 <div>
     <p>
@@ -66,108 +66,108 @@ import produce from 'immer';
 
 main.js:
 ```JS
-    import React from 'react';
-    import ReactDOM from 'react-dom';
-    import { Provider } from 'react-redux';
-    import store from './redux/store';
-    import Header from './header';
-    import Banner from './banner';
-    import '../styles/main.scss';
-    const App = () => {
-        return (
-            <Provider store = {store}>
-                <Header/>
-                <Banner/>
-            </Provider>
-        );
-    }
-    ReactDOM.render(<App/> , document.querySelector('main'));
+import React from 'react';
+import ReactDOM from 'react-dom';
+import { Provider } from 'react-redux';
+import store from './redux/store';
+import Header from './header';
+import Banner from './banner';
+import '../styles/main.scss';
+const App = () => {
+return (
+    <Provider store = {store}>
+        <Header/>
+        <Banner/>
+    </Provider>
+);
+}
+ReactDOM.render(<App/> , document.querySelector('main'));
 ```
 header.js
 ```JS
-      import React from 'react';
-        import { connect } from 'react-redux';
-        import { setUserName } from './redux/actions';
-        function mapStateToProps(state) {
-            return {
-                username: state.username,
-            }
-        }
-        export default connect(mapStateToProps)(function Header(props) {
-            const { username , dispatch } = props;
-            function onInputHandler(e) {
-                dispatch(setUserName(e.target.value));
-            }
-            return (
-                <div className="header">
-                    <label>
-                        Username:
-                        <input type="text" value={username} onInput={onInputHandler}/>
-                    </label>
-                </div>
-            )
-        });
+import React from 'react';
+import { connect } from 'react-redux';
+import { setUserName } from './redux/actions';
+function mapStateToProps(state) {
+    return {
+        username: state.username,
+    }
+}
+export default connect(mapStateToProps)(function Header(props) {
+    const { username , dispatch } = props;
+    function onInputHandler(e) {
+        dispatch(setUserName(e.target.value));
+    }
+    return (
+        <div className="header">
+            <label>
+                Username:
+                <input type="text" value={username} onInput={onInputHandler}/>
+            </label>
+        </div>
+    )
+});
 ```  
 banner.js
 ```JS
 import React from 'react';
-        import { connect } from 'react-redux';
-        function mapStateToProps(state) {
-            return {
-                username: state.username,
-            }
-        }
-        export default connect(mapStateToProps)(function Banner(props) {
-            const { username } = props;
-            return (
-            <h1> Hi {username} and wellcome to our website </h1>
-            )
-        });
+import { connect } from 'react-redux';
+function mapStateToProps(state) {
+    return {
+        username: state.username,
+    }
+}
+export default connect(mapStateToProps)(function Banner(props) {
+    const { username } = props;
+    return (
+    <h1> Hi {username} and wellcome to our website </h1>
+    )
+});
 ```        
 store.js
 ```JS
 import produce from 'immer';
-        import { createStore } from 'redux';
-        const initialState = {
-            username:'guest',
-            messages:[
-                {id: 0 , from: 'System' , text:'Hello world'},
-            ],
-        }
-        function getNextId(items) {
-        return Math.max(...items.map(item=> item.id)) + 1;
-        }
-        const reducer = produce((state, action)=>{
-            switch (action.type) {
-                case 'SET_USERNAME':
-                    state.username = action.payload;
-                    break;
-                case 'RECEIVED_MESSAGE':      
-                    state.messages.push({id: getNextId(state.messages), ...action.payload});
-                    break;
-                case 'CREATE_ROOM':
-                    state.rooms.push({ id: getNextId(state.rooms), name: action.payload });
-                    break;
-                case 'SET_ACTIVE_ROOM':
-                    state.activeRoomId = action.payload;
-                    break;
-                case 'RECEIVED_ROOMS':
-                    state.rooms = action.payload;
-                    break;
-            }
-        }, initialState);
-        const store = createStore(reducer);
-        window.store = store;
-        export default store;
+import { createStore } from 'redux';
+const initialState = {
+    username:'guest',
+    messages:[
+        {id: 0 , from: 'System' , text:'Hello world'},
+    ],
+}
+function getNextId(items) {
+return Math.max(...items.map(item=> item.id)) + 1;
+}
+const reducer = produce((state, action)=>{
+    switch (action.type) {
+        case 'SET_USERNAME':
+            state.username = action.payload;
+            break;
+        case 'RECEIVED_MESSAGE':      
+            state.messages.push({id: getNextId(state.messages), ...action.payload});
+            break;
+        case 'CREATE_ROOM':
+            state.rooms.push({ id: getNextId(state.rooms), name: action.payload });
+            break;
+        case 'SET_ACTIVE_ROOM':
+            state.activeRoomId = action.payload;
+            break;
+        case 'RECEIVED_ROOMS':
+            state.rooms = action.payload;
+            break;
+    }
+}, initialState);
+const store = createStore(reducer);
+window.store = store;
+export default store;
 ```
 actions.js
 ```JS
-        export function setUserName(username) {
-            return {type: 'SET_USERNAME' , payload: username};
-        }
-        export function receivedMessage(message) {
-            return {type: 'RECEIVED_MESSAGE' , payload : message};
-        }
+export function setUserName(username) {
+    return {type: 'SET_USERNAME' , payload: username};
+}
+export function receivedMessage(message) {
+    return {type: 'RECEIVED_MESSAGE' , payload : message};
+}
 ```
     
 # Combine reducers:
