updates summaries lessons: 38-46

--- a/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
+++ b/my-react-course/course summaries/7.) Development-of-large-applications-with-Redux.md
@@ -172,7 +172,7 @@ export function receivedMessage(message) {
     
 # Combine reducers:
 
-- Example:
+Example:
 main.js
 ```JS
 import React from 'react';
