--- a/my-react-course/course summaries/8.) React Router.md
+++ b/my-react-course/course summaries/8.) React Router.md
@@ -50,11 +50,9 @@ const App = () => {
   return (
       <Router>
           <Menu />
-          <Switch>
-            <Route path="/about" component={About}/>
-            <Route path="/users" component={Users}/>
-            <Route path="/" component={Home}/>
-          </Switch>
+          <Route path="/" exact component={Home}/>
+          <Route path="/about" component={About}/>
+          <Route path="/users" component={Users}/>
       </Router>
   );
   //Old version
